added functionality for working with pictures

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 })
 <body>
    @@include('html/header.html',{})
-<main>Main</main>
+<main> <img src="@img/20220903_135233.jpg" alt="photo"></main>
    @@include('html/footer.html',{})
 </body>
 </html>
