--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,7 @@
    @@include('html/header.html',{})
 <main> <img src="@img/20220903_135233.jpg" alt="photo"></main>
    @@include('html/footer.html',{})
+
+   <script src="js/app.min.js"></script>
 </body>
 </html>
