--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 })
 <body>
    @@include('html/header.html',{})
-<main> <img src="@img/20220903_135233.jpg" alt="photo"></main>
+<main> <h1>Hello Vasyl!</h1></main>
    @@include('html/footer.html',{})
 
    <script src="js/app.min.js"></script>
