--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,1 +1,1 @@
-<header> <span>it is Header</span> </header>
+<header> Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, sequi. Hic quo facilis, aspernatur mollitia ab nam est reprehenderit totam. </header>
