--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
 <main> <h1>Hello Vasyl!</h1></main>
    @@include('html/footer.html',{})
 
-   <!-- //<script src="js/app.min.js"></script> -->
+   <script src="js/app.min.js"></script>
 </body>
 </html>
