--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
 })
 <body>
    @@include('html/header.html',{})
-<main> <h1>Hello Vasyl!</h1></main>
+<main> 
+<span><img width="200px" src="@img/cloud.svg" alt="foto"></span>
+</main>
    @@include('html/footer.html',{})
 
    <script src="js/app.min.js"></script>
